# riscv-xray

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: command-reference.md  getting-started.md
examples/: bench_rvv.c  bench_scalar.c
plugin/: qemu-plugin.h
plugin/plugin/: Makefile  xray_plugin.c
riscv-venv/: pyvenv.cfg
riscv_xray/: __init__.py  accuracy.py  autovec.py  classifier.py  cli.py  extensions.py  flag_generator.py  function_diff.py  gen_stub.py  hotspot.py  hwprobe.py  patterns.py  plugin_loader.py  profile_checker.py  recommender.py  report.py  security.py  vector_quality.py
riscv_xray.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
riscv_xray/backends/: __init__.py  objdump_backend.py  perf_backend.py
riscv_xray/plugins/: __init__.py  xtheadv.py
riscv_xray/riscv_xray/: __init__.py  cli.py  extensions.py  parser.py  profiler.py  recommender.py  report.py  runner.py
tests/: test_accuracy.py  test_autovec.py  test_classifier.py  test_flag_generator.py  test_function_diff.py  test_hotspot.py  test_hwprobe.py  test_objdump_backend.py  test_parser.py  test_perf_backend.py  test_plugins.py  test_profile_checker.py  test_recommender.py  test_security.py  test_vector_quality.py
tests/fixtures/: sample_log.txt
