[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riscv-xray"
version = "0.3.0"
description = "Developer-friendly RISC-V extension profiler"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "riscv-xray contributors" }
]
keywords = ["risc-v", "profiler", "qemu", "rva23", "embedded"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: System :: Emulators",
]

[project.scripts]
riscv-xray = "riscv_xray.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/prasanthandena-gh/riscv-xray"
Issues = "https://github.com/prasanthandena-gh/riscv-xray/issues"

[tool.setuptools.packages.find]
include = ["riscv_xray*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
